--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -17,5 +17,11 @@
     color: white;
     padding: 1.5rem;
     right: 0;
+
+    .game__dot {
+      svg {
+        fill: white;
+      }
+    }
   }
 }
