--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,6 +1,40 @@
-.app {
-  background: #ececeb;
+body {
+  //background: #e0e0e0;
+  //background-color: #d0d0c4;
+}
+
+.title-wrapper {
   position: relative;
+}
+
+.square {
+  background-color: #8b1207;
+  width: 5px;
+  height: 5px;
+  /* content: ' '; */
+  position: absolute;
+  top: -8px;
+  left: -8px;
+  right: 0;
+  bottom: 0;
+}
+
+.app {
+  //background: #ececeb;
+  //background: #d0d0c4;
+  background: #fdfaf1;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 60rem;
+  min-height: 100vh;
+  padding: 2.75rem 4rem;
+}
+
+@media (max-width: 450px) {
+  .app {
+    padding: 2.5rem 1.2rem;
+  }
 }
 
 .bgame-wrapper {
@@ -30,4 +64,47 @@
   height: 2px;
   background: #e0e0e0;
   border-radius: 3px;
+  margin: 1.25rem 0;
+}
+
+._hidden {
+  display: none;
+}
+
+$red: #8b1207;
+
+.menu {
+  font-size: 0.75rem;
+
+  a:hover, a:visited, a:link, a:active
+  {
+    text-decoration: none;
+  }
+
+  a {
+    text-decoration: none;
+    transition-property: color;
+    transition-duration: 150ms;
+    transition-timing-function: ease-in;
+    padding-right: 1.25rem;
+    color: #222;
+    opacity: 0.75;
+    box-shadow: none;
+
+    &:hover {
+      color: lighten($red, 15%);
+    }
+  }
+}
+
+header {
+  h1 {
+    font-size: 1.75rem;
+    //margin-bottom: 1rem;
+    margin-top: 0;
+    line-height: 100%;
+    letter-spacing: 1px;
+    color: #222;
+    font-family: inherit;
+  }
 }
